--- a/acronyms.tex
+++ b/acronyms.tex
@@ -41,4 +41,4 @@
 \DeclareAcronym{soho}{short=SOHO, long=Small Office Home Office}
 \DeclareAcronym{snmp}{short=SNMP, long=Simple Network Management Protocol}
 \DeclareAcronym{cve}{short=CVE, long=Common Vulnerabilities and Exposures}
-\DeclareAcronym{vpn}{short=VPN, long=Virtual Private Network}
+\DeclareAcronym{vpn}{short=VPN, long=virtual private network}
