--- a/acronyms.tex
+++ b/acronyms.tex
@@ -38,7 +38,11 @@
 \DeclareAcronym{belwue}{short=BelWÜ, long=Baden-Württembergs extended LAN}
 \DeclareAcronym{bpp}{short=BPP, long=Binary Packet Protocol}
 \DeclareAcronym{mac}{short=MAC, long=Message Authentication Code}
-\DeclareAcronym{soho}{short=SOHO, long=Small Office Home Office}
+\DeclareAcronym{soho}{short=SOHO, long=small office/home office}
 \DeclareAcronym{snmp}{short=SNMP, long=Simple Network Management Protocol}
 \DeclareAcronym{cve}{short=CVE, long=Common Vulnerabilities and Exposures}
 \DeclareAcronym{vpn}{short=VPN, long=virtual private network}
+\DeclareAcronym{ident}{short=IDENT, long=Identification Protocol}
+\DeclareAcronym{smtp}{short= , long=}
+\DeclareAcronym{ncp}{short= , long=}
+\DeclareAcronym{tcp}{short= , long=}
