--- a/acronyms.tex
+++ b/acronyms.tex
@@ -43,6 +43,7 @@
 \DeclareAcronym{cve}{short=CVE, long=Common Vulnerabilities and Exposures}
 \DeclareAcronym{vpn}{short=VPN, long=virtual private network}
 \DeclareAcronym{ident}{short=IDENT, long=Identification Protocol}
-\DeclareAcronym{smtp}{short= , long=}
-\DeclareAcronym{ncp}{short= , long=}
-\DeclareAcronym{tcp}{short= , long=}
+\DeclareAcronym{smtp}{short=SMTP, long=Simple Mail Transfer Protocol}
+\DeclareAcronym{ncp}{short=NVP, long=Network Control Protocol}
+\DeclareAcronym{tcp}{short=TCP, long=Transmission Control Protocol}
+\DeclareAcronym{dfn}{short=DFN , long=German National Research and Education Network}
