--- a/main.tex
+++ b/main.tex
@@ -87,7 +87,7 @@
 }
 
 \usepackage{numprint}
-\npthousandsep{\,}
+\npthousandsep{,}
 
 \newcommand*{\files}{
     introduction,
@@ -111,8 +111,6 @@
 \include{titlepages-eng}
 
 \pagenumbering{Roman}
-
-%\include{abstracts}
 
 \include{abstract-eng.tex}
 
