--- a/abstract-eng.tex
+++ b/abstract-eng.tex
@@ -1,4 +1,22 @@
 \thispagestyle{empty}
 \begin{center}
-    \textbf{Abstract}
+    \begin{minipage}[c][0.48\textheight][b]{0.9\textwidth}
+        \small
+        \begin{center}
+            \textbf{Abstract}
+        \end{center}\par
+        \vspace{\baselineskip}
+        Nowadays, services which are accessible from the Internet face more attacks than ever.
+        An attackers' objective is to exploit systems and use them for their own vicious purposes.
+        Such efforts are on the rise as faulty systems can be discovered and compromised through Internet-wide scanning.
+        Besides traditional security leverages, one known methodolgy is to learn from those who attacks it.
+        A Honeypot helps to gather information about an attacker.
+        It is a security resource whose value lies in being probed, attacked, or compromised.
+        Thus, it is an interesting question how honeypots can contribute to more secure infrastructure.
+        In this work we will present a honeypot solution to investigate cybercrime activities in heiCLOUD, and show that attacks have increased significantly.
+        We will try to catch attackers in restricted network zones at the Heidelberg University, and we discovered leaks in the firewall allowing attackers to send malicious packets to the network.
+        Moreover, we will consider an attacker's point of view by present a method to detect honeypots on transport level.
+        Lastly, we mitigate these efforts with a customized OpenSSH version.
+    \end{minipage}\par
+    \vfill
 \end{center}
