--- a/abstract-ger.tex
+++ b/abstract-ger.tex
@@ -1,4 +1,23 @@
 \thispagestyle{empty}
 \begin{center}
-    \textbf{Zusammenfassung}
+    \begin{minipage}[c][0.48\textheight][b]{0.9\textwidth}
+        \small
+        \begin{center}
+            \textbf{Zusammenfassung}
+        \end{center}\par
+        \vspace{\baselineskip}
+        Heutzutage sind Dienste, die über das Internet zugänglich sind, mehr Angriffen ausgesetzt als je zuvor.
+        Das Ziel von Angreifern ist es, Systeme auszunutzen und sie für ihre eigenen bösartigen Zwecke zu verwenden.
+        Derartige Bemühungen nehmen zu, da fehlerhafte Systeme durch internetweites Scannen entdeckt und kompromittiert werden können.
+        Neben den traditionellen Sicherheitsmaßnahmen besteht auch die Möglichkeit, von den Angreifern zu lernen.
+        Ein Honeypot hilft dabei, Informationen über Angreifer zu sammeln.
+        Er ist eine Sicherheitsressource, deren Wert darin liegt, dass sie untersucht, angegriffen oder kompromittiert wird.
+        Daher ist es eine interessante Frage, wie Honeypots zu einer sichereren Infrastruktur beitragen können.
+        In dieser Arbeit werden wir eine Honeypot-Lösung zur Untersuchung von Cybercrime-Aktivitäten in der heiCLOUD vorstellen und zeigen, dass die Angriffe aus dem Internet erheblich zugenommen haben.
+        Des Weiteren werden wir versuchen, Angreifer in eingeschränkten Netzwerkzonen der Universität Heidelberg zu entdecken.
+        Wir werden zeigen, dass die Firewall lücken aufweist und Angreifer in der Lage waren gewisse Bereiche zu scannen.
+        Zusätzlich werden wir die Sichtweise eines Angreifers einnehmen und eine Methode zur Erkennung von Honeypots auf Transportebene vorstellen.
+        Abschließend stellen wir ein Konzept zur Entschärfung dieser Maßnahmen vor.
+    \end{minipage}\par
+    \vfill
 \end{center}
