--- a/ack.tex
+++ b/ack.tex
@@ -1,2 +1,14 @@
 \chapter*{Acknowledgements}
 \thispagestyle{empty}
+
+First and foremost, I am deeply grateful to my supervisor Prof. Dr. Vincent Heuveline for his valuable and constructive input.
+Without his guidance and mentorship I would have not been able to finish this thesis.
+Moreover, I was able to grow as a researcher, and I am immensely grateful for the oppurtunity to continue my research as a future PhD candidate under his supervision.
+
+I would like to thank Stefan Steiger, and Olaf Pichler from the Computing Centre at the Heidelberg University for their invaluable advice at crucial times and their sincere interest in my topic.
+No matter what happened, they always had time and provided me ample support.
+
+I am indebted to Joachim Peek for his continuous support .
+His helped me to understand the quirks, and pushed my 
+
+Last but not least, I would like to thank my girlfriend Carmen for 
