--- a/main.tex
+++ b/main.tex
@@ -153,15 +153,15 @@
 }
 
 \cleardoublepage
-\pagenumbering{Roman}
-\setcounter{page}{10}
+%\pagenumbering{Roman}
+%\setcounter{page}{10}
 
 \bibliographystyle{plainnat}  
 \bibliography{references}
 
 % Installation and configuration
 \begin{appendices}
-\include{chapters/appendix.tex}
+  \include{chapters/appendix.tex}
 \end{appendices}
 
 \end{document}
