--- a/abstract-eng.tex
+++ b/abstract-eng.tex
@@ -16,7 +16,7 @@
         In this work we will present a honeypot solution to investigate cybercrime activities in heiCLOUD, and show that attacks have increased significantly.
         We will try to catch attackers in restricted network zones at the Heidelberg University, and we discovered leaks in the firewall allowing attackers to send malicious packets to the network.
         Moreover, we will consider an attacker's point of view by present a method to detect honeypots on transport level.
-        Lastly, we mitigate these efforts with a customized OpenSSH version.
+        Lastly, we mitigate these efforts with a customized OpenSSH server working as an intermediary instance.
     \end{minipage}\par
     \vfill
 \end{center}
