--- a/ack.tex
+++ b/ack.tex
@@ -8,7 +8,7 @@ Moreover, I was able to grow as a researcher, and I am immensely grateful for th
 I would like to thank Stefan Steiger, and Olaf Pichler from the Computing Centre at the Heidelberg University for their invaluable advice at crucial times and their sincere interest in my topic.
 No matter what happened, they always had time and provided me ample support.
 
-I am indebted to Joachim Peek for his continuous support .
-His helped me to understand the quirks, and pushed my 
+I am indebted to Joachim Peek for generously agreeing to examine my results and providing meticulous feedback.
+His help to understand essential parts lead to enormous results.
 
-Last but not least, I would like to thank my girlfriend Carmen for 
+Last but not least, I would like to thank my girlfriend Carmen for her commitment to proofread my thesis, and patiently listen to all my thoughts during that time.
