--- a/abstract-ger.tex
+++ b/abstract-ger.tex
@@ -11,7 +11,7 @@
         Derartige Bemühungen nehmen zu, da fehlerhafte Systeme durch internetweites Scannen entdeckt und kompromittiert werden können.
         Neben den traditionellen Sicherheitsmaßnahmen besteht auch die Möglichkeit, von den Angreifern zu lernen.
         Ein Honeypot hilft dabei, Informationen über Angreifer zu sammeln.
-        Er ist eine Sicherheitsressource, deren Wert darin liegt, dass sie untersucht, angegriffen oder kompromittiert wird.
+        Es ist eine Sicherheitsressource, deren Wert darin liegt, dass sie untersucht, angegriffen oder kompromittiert wird.
         Daher ist es eine interessante Frage, wie Honeypots zu einer sichereren Infrastruktur beitragen können.
         In dieser Arbeit werden wir eine Honeypot-Lösung zur Untersuchung von Cybercrime-Aktivitäten in der heiCLOUD vorstellen und zeigen, dass die Angriffe aus dem Internet erheblich zugenommen haben.
         Des Weiteren werden wir versuchen, Angreifer in eingeschränkten Netzwerkzonen der Universität Heidelberg zu entdecken.
