--- a/abstract-eng.tex
+++ b/abstract-eng.tex
@@ -12,10 +12,10 @@
         Besides traditional security leverages, one known methodolgy is to learn from those who attacks it.
         A honeypot helps to gather information about an attacker.
         It is a security resource whose value lies in being probed, attacked, or compromised.
-        Thus, it is an interesting question how honeypots can contribute to more secure infrastructure.
-        In this work we will present a honeypot solution to investigate cybercrime activities in heiCLOUD, and show that attacks have increased significantly.
-        We will try to catch attackers in restricted network zones at the Heidelberg University, and we discover leaks in the firewall allowing attackers to send malicious packets to the network.
-        Moreover, we will consider an attacker's point of view by present a method to detect honeypots on transport level.
+        Thus, how honeypots can contribute to more secure infrastructure makes an interesting topic of research.
+        In this thesis we will present a honeypot solution to investigate cybercrime activities in heiCLOUD, and show that attacks have increased significantly.
+        We will try to catch attackers in restricted network zones at the Heidelberg University, and discover leaks in the firewall that is allowing attackers to send malicious packets to the network.
+        Moreover, we will consider an attacker's point of view by presenting a method to detect honeypots on transport level.
         Lastly, we mitigate these efforts with a customized OpenSSH server working as an intermediary instance.
     \end{minipage}\par
     \vfill
