--- a/ack.tex
+++ b/ack.tex
@@ -9,6 +9,6 @@ I would like to thank Stefan Steiger, and Olaf Pichler from the Computing Centre
 No matter what happened, they always had time and provided me ample support.
 
 I am indebted to Joachim Peek for generously agreeing to examine my results and providing meticulous feedback.
-His help to understand essential parts lead to enormous results.
+His help to understand essential parts of the topic lead to enormous results.
 
-Last but not least, I would like to thank my girlfriend Carmen for her commitment to proofread my thesis, and patiently listen to all my thoughts during that time.
+Last but not least, I would like to thank my girlfriend Carmen for her commitment to proofread my thesis, and her patience in listening to all my thoughts during that period of time.
