--- a/abstract-eng.tex
+++ b/abstract-eng.tex
@@ -6,17 +6,16 @@
             \textbf{Abstract}
         \end{center}\par
         \vspace{\baselineskip}
-        Nowadays, services which are accessible from the Internet face more attacks than ever.
-        An attackers' objective is to exploit systems and use them for their own vicious purposes.
-        Such efforts are on the rise as faulty systems can be discovered and compromised through Internet-wide scanning.
-        Besides traditional security leverages, one known methodolgy is to learn from those who attacks it.
-        A honeypot helps to gather information about an attacker.
-        It is a security resource whose value lies in being probed, attacked, or compromised.
+        Nowadays, services accessible from the Internet face more attacks than ever.
+        An attacker's objective is to exploit systems and use them for malicious purposes.
+        Such efforts are rising as vulnerable systems can be discovered and compromised through Internet-wide scanning.
+        One known methodology besides traditional security leverages is to learn from those who attack it.
+        A honeypot helps to collect information about an attacker by pretending to be a vulnerable target.
         Thus, how honeypots can contribute to more secure infrastructure makes an interesting topic of research.
-        In this thesis we will present a honeypot solution to investigate cybercrime activities in heiCLOUD, and show that attacks have increased significantly.
-        We will try to catch attackers in restricted network zones at the Heidelberg University, and discover leaks in the firewall that is allowing attackers to send malicious packets to the network.
-        Moreover, we will consider an attacker's point of view by presenting a method to detect honeypots on transport level.
-        Lastly, we mitigate these efforts with a customized OpenSSH server working as an intermediary instance.
-    \end{minipage}\par
+        This thesis will present a honeypot solution to investigate malicious activities in heiCLOUD and show that attacks have increased significantly.
+        To detect attackers in restricted network zones at Heidelberg University, the author will create a new concept to discover leaks in the firewall.
+        Furthermore, a method for detecting honeypots at the transport level will be introduced to consider an attacker's point of view.
+        Lastly, a customized OpenSSH server that works as an intermediary instance will be presented to mitigate these efforts.
+        \end{minipage}\par
     \vfill
 \end{center}
