--- a/references.bib
+++ b/references.bib
@@ -870,7 +870,7 @@
 @misc{glutton2021,
   author       = {Lukas Rist and Johnny Vestergaard and Daniel Haslinger and Andrea Pasquale and John Smith},
   organization = {MushMush},
-  title        = {Glutton: low interaction honeypot},
+  title        = {Glutton: low-interaction honeypot},
   howpublished = {\url{https://github.com/mushorg/glutton}},
   year         = {2021},
   note         = {Accessed: 2021-09-26}
