--- a/abstract-eng.tex
+++ b/abstract-eng.tex
@@ -14,7 +14,7 @@
         Thus, how honeypots can contribute to more secure infrastructure makes an interesting topic of research.
         This thesis will present a honeypot solution to investigate malicious activities in heiCLOUD and show that attacks have increased significantly.
         To detect attackers in restricted network zones at Heidelberg University, the author will create a new concept to discover leaks in the firewall.
-        Furthermore, a method for detecting honeypots at the transport level will be introduced to consider an attacker's point of view.
+        Furthermore, to consider an attacker's point of view, a method for detecting honeypots at the transport level will be introduced.
         Lastly, a customized OpenSSH server that works as an intermediary instance will be presented to mitigate these efforts.
         \end{minipage}\par
     \vfill
