--- a/abstract-ger.tex
+++ b/abstract-ger.tex
@@ -10,14 +10,13 @@
         Das Ziel von Angreifern ist es, Systeme auszunutzen und sie für ihre eigenen bösartigen Zwecke zu verwenden.
         Derartige Bemühungen nehmen zu, da verwundbare Systeme durch internetweites Scannen entdeckt und kompromittiert werden können.
         Neben den traditionellen Sicherheitsmaßnahmen besteht auch die Möglichkeit, von den Angreifern zu lernen.
-        Ein Honeypot hilft dabei, Informationen über Angreifer zu sammeln.
-        Es ist eine Sicherheitsressource, deren Wert darin liegt, dass sie untersucht, angegriffen oder kompromittiert wird.
+        Ein Honeypot hilft dabei, Informationen über Angreifer zu sammeln, indem er vorgibt, ein verwundbares Ziel zu sein.
         Daher ist es eine interessante Forschungsfrage, wie Honeypots zu einer sichereren Infrastruktur beitragen können.
-        In dieser Arbeit werden wir eine Honeypot-Lösung zur Untersuchung von Böswillige-Aktivitäten in der heiCLOUD vorstellen und zeigen, dass die Angriffe aus dem Internet erheblich zugenommen haben.
-        Des Weiteren werden wir versuchen, Angreifer in eingeschränkten Netzwerkzonen der Universität Heidelberg zu entdecken.
-        Wir werden zeigen, dass die Firewall lücken aufweist und Angreifer in der Lage waren gewisse Bereiche zu scannen.
-        Zusätzlich werden wir die Sichtweise eines Angreifers einnehmen und eine Methode zur Erkennung von Honeypots auf Transportebene vorstellen.
-        Abschließend stellen wir ein Konzept zur Entschärfung dieser Maßnahmen vor.
+        In dieser Arbeit wird eine Honeypot-Lösung zur Untersuchung von Böswillige-Aktivitäten in der heiCLOUD vorgestellt und gezeigt, dass die Angriffe aus dem Internet erheblich zugenommen haben.
+        Des Weiteren wird versucht, Angreifer in eingeschränkten Netzwerkzonen der Universität Heidelberg zu entdecken.
+        Die Ergebnisse zeigen, dass die Firewall Lücken aufweist und Angreifer in der Lage waren gewisse Bereiche zu scannen.
+        Zusätzlich wird die Sichtweise eines Angreifers eingenommen und eine Methode zur Erkennung von Honeypots auf Transportebene vorgestellt.
+        Abschließend wird ein angepasster OpenSSH-Server vorgestellt, der als Zwischeninstanz fungiert, um diese Bemühungen zu verhindern.
     \end{minipage}\par
     \vfill
 \end{center}
